--- a/_includes/sections/commercial.html
+++ b/_includes/sections/commercial.html
@@ -56,7 +56,7 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">Prioritary Support</h3>
+              <h3 class="plan-title">Premium Support</h3>
               <hr class="normal">
               <p class="plan-subtitle">Fast <span class="text-focus">Answer</span></p>
             </div>
