--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#portfolio">Screenshots</a></li>
-            <!--<li><a href="#testimonials">Testimonials</a></li>-->
+            <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#support">Support</a></li>
             <li><a href="#communication">Help</a></li>
             <li><a href="#team">Team</a></li>
