--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,13 +25,20 @@
             <li><a href="{{ site.github }}" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
           </ul>
         </div>
+        
+        <div class="footer-info-text">
+          <p>
+            <img src="http://img.shields.io/gratipay/team/TheTeampass.svg">
+          </p>
+        </div>
 
       </div>
 
       <div class="col-md-8 col-md-push-2 footer-copyright">
         <div class="footer-text text-center">
           <p>All Right Reserved!</p>
-        <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
+          <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
+          <p><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></p>
         </div>
       </div>
     </div>
