--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
         </div>
-        <div class="footer-logo">
+        <div class="footer-logo text-center">
           <img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" />
         </div>
       </div>
