--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,8 @@
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
         </div>
         <div class="footer-logo text-center">
-          <img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" />
+          <img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" />&nbsp;with&nbsp;          
+          <img src="{{ site.baseurl }}/images/phpstorm_100.png" alt="PHPStorm" />
         </div>
       </div>
     </div>
