--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
           <p>
             <img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" />&nbsp;with&nbsp;          
-            <a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="{{ site.baseurl }}/images/phpstorm_100.png" alt="PHPStorm" /></a>
+            <a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a>
           </p>
         </div>
       </div>
