--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,8 +33,13 @@
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
           <p>
-            <img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" />&nbsp;with&nbsp;          
-            <a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a>
+            <table style="text-align:center; width:100%;" border="0px">
+              <tr>
+                <td><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></td>
+                <td>&nbsp;with&nbsp;</td>
+                <td><a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a></td>
+              </tr>
+            </table>
           </p>
         </div>
       </div>
