--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,9 +33,9 @@
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
           <p>
-            <table style="text-align:center; width:100%;" border="0px">
+            <table style="text-align:center; width:100%; background:none;" border="0px">
               <tr>
-                <td><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></td>
+                <td style="text-align:center;"><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></td>
                 <td>&nbsp;with&nbsp;</td>
                 <td><a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a></td>
               </tr>
