--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,15 +32,7 @@
         <div class="footer-text text-center">
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
-          <p>
-            <table style="text-align:center; width:100%; background:none;" border="0px">
-              <tr>
-                <td style="text-align:center;"><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></td>
-                <td>&nbsp;with&nbsp;</td>
-                <td><a href="https://www.jetbrains.com/phpstorm/" target="_blank"><img src="https://teampass.net/images/phpstorm_100.png" alt="PHPStorm" /></a></td>
-              </tr>
-            </table>
-          </p>
+          <p>><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></p>
         </div>
       </div>
     </div>
