--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
         <div class="footer-text text-center">
           <p>All Right Reserved!</p>
           <p><a href="{{ site.footer-copyright-url }}">{{ site.footer-copyright-text }}</a> &copy; {{ site.footer-copyright-year }} Copyright</p>
-          <p>><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></p>
+          <p><img src="{{ site.baseurl }}/images/madeinfrance.png" alt="{{site.title}}" /></p>
         </div>
       </div>
     </div>
