--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,11 @@
 
   <!-- Importing Styles -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-6796519999488555",
+            enable_page_level_ads: true
+       });
+  </script>
 </head>
