--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <!-- Site Footer -->
 <footer class="site-footer" id="footer">
+  {% include advertisements.html %}
   <div class="container">
 
     <div class="row">
