--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,18 @@
 
   <!-- Importing Styles -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+  
+  <!-- ADSENSE -->
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-6796519999488555",
             enable_page_level_ads: true
        });
+  </script>
+  
+  <!-- AMP -->
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
 </head>
