--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,9 @@
        });
   </script>
   
-  <!-- AMP -->
+  <!-- AMP
   <script async custom-element="amp-auto-ads"
         src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
+ -->
 </head>
