--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,6 +28,8 @@
           <div class="col-md-8 blog-articles-container">
 
             {{ content }}
+            
+            {% include ads.html %}
 
           </div>
 
