--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
     {% include header.html %}
 
     {{ content }}
+    
+    <!-- ADSENSE -->
+    {% include ads.html %}
 
     {% include footer.html %}
 
