--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,6 +42,9 @@ layout: page
           {% assign tags_list = nil %}
         </ul>
       </div>
+      
+      <!-- ADSENSE -->
+      {% include ads.html %}
 
       <!-- Share Article Links Box -->
       <div class="share-article box clearfix">
