--- a/_layouts/single_page.html
+++ b/_layouts/single_page.html
@@ -25,6 +25,9 @@
           </div>
 
         </div>
+        
+        <!-- ADSENSE -->
+        {% include ads.html %}
 
       </div>
     </section>
