--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({
             google_ad_client: "ca-pub-6796519999488555",
-            enable_page_level_ads: true
+            enable_page_level_ads: false
        });
   </script>
 
