--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,25 @@
 <!-- Site Footer -->
+
+<div class="text-center">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Teampass adaptative -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6796519999488555"
+       data-ad-slot="5258507839"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+
 <footer class="site-footer" id="footer">
   <div class="container">
 
     <div class="row">
       <div class="col-md-6 col-md-push-3 footer-info text-center">
-        <div>
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <!-- Teampass adaptative -->
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-6796519999488555"
-               data-ad-slot="5258507839"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-        </div>
-
+        
         <div class="footer-logo">
           <img src="{{ site.baseurl }}/images/logo.svg" width="140" alt="{{site.title}}" />
         </div>
