--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,20 @@
 <!-- Site Footer -->
-
-<div class="text-center">
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- Teampass adaptative -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-6796519999488555"
-       data-ad-slot="5258507839"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div>
-
 <footer class="site-footer" id="footer">
+  
+  <div class="text-center" style="margin:10px 0 10px 0;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Teampass adaptative -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-6796519999488555"
+         data-ad-slot="5258507839"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  
   <div class="container">
 
     <div class="row">
