--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   
   <div class="container">
   
-    <div class="text-center" style="margin:10px 0 10px 0;">
+    <div class="text-center" style="margin-top:20px;">
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Teampass adaptative -->
       <ins class="adsbygoogle"
