Updating with Teampass v3 details

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -18,5 +18,54 @@
 
     </div>
 
+    <div class="row text-center">
+    <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
+      <p>{{ site.keyvalues-description }}</p>
+    </div>
+
+    <div class="col-md-8 col-md-push-2 col-sm-12 section-content" style="margin-top:15px;">
+        <div class="col-md-3 section-content">
+            <img alt="GitHub release (with filter)" src="https://img.shields.io/github/v/release/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub" src="https://img.shields.io/github/license/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub language count" src="https://img.shields.io/github/languages/count/nilsteampassnet/teampass?label=Number of languages">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub followers" src="https://img.shields.io/github/followers/nilsteampassnet">
+        </div>
+    </div>
+    <div class="col-md-8 col-md-push-2 col-sm-12 section-content" style="margin-top:15px;">
+        <div class="col-md-3 section-content">
+            <img alt="GitHub Release Date - Published_At" src="https://img.shields.io/github/release-date/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub forks" src="https://img.shields.io/github/forks/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub commit activity (branch)" src="https://img.shields.io/github/commit-activity/w/nilsteampassnet/teampass">
+        </div>
+    </div>
+    <div class="col-md-8 col-md-push-2 col-sm-12 section-content" style="margin-top:15px;">
+        <div class="col-md-3 section-content">
+            <img alt="GitHub repo size" src="https://img.shields.io/github/repo-size/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub repo file count (file type)" src="https://img.shields.io/github/directory-file-count/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub code size in bytes" src="https://img.shields.io/github/languages/code-size/nilsteampassnet/teampass">
+        </div>
+        <div class="col-md-3 section-content">
+            <img alt="GitHub last commit (branch)" src="https://img.shields.io/github/last-commit/nilsteampassnet/teampass/master">
+        </div>
+    </div>
+  </div>
+
   </div>
 </section>
