--- a/_includes/sections/commercial.html
+++ b/_includes/sections/commercial.html
@@ -84,9 +84,9 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">Participate</h3>
+              <h3 class="plan-title">Sponsoring</h3>
               <hr class="normal">
-              <p class="plan-subtitle">Support <span class="text-focus">Our Work</span></p>
+              <p class="plan-subtitle">Become a <span class="text-focus">Sponsor</span></p>
             </div>
 
             <!-- Plan Content -->
@@ -100,7 +100,7 @@
 
             <!-- Plan Action -->
             <div class="plan-action">
-              <a href="{{ site.commercial-donate-url }}" class="button">Donate</a>
+              <a href="{{ site.commercial-donate-url }}" class="button">Thank you</a>
             </div>
 
           </div>
