--- a/_includes/sections/prices.html
+++ b/_includes/sections/prices.html
@@ -28,9 +28,9 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">Github</h3>
+              <h3 class="plan-title">Defects</h3>
               <hr class="normal">
-              <p class="plan-subtitle">For <span class="text-focus">Defects</span></p>
+              <p class="plan-subtitle">Facing <span class="text-focus">Bugs</span></p>
             </div>
 
             <!-- Plan Content -->
@@ -57,9 +57,9 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">UserEcho</h3>
+              <h3 class="plan-title">Requests</h3>
               <hr class="normal">
-              <p class="plan-subtitle">For <span class="text-focus">Requests</span></p>
+              <p class="plan-subtitle">Your <span class="text-focus">Suggestions</span></p>
             </div>
 
             <!-- Plan Content -->
@@ -86,9 +86,9 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">ReadTheDocs</h3>
+              <h3 class="plan-title">Documentation</h3>
               <hr class="normal">
-              <p class="plan-subtitle">Full <span class="text-focus">Documentation</span></p>
+              <p class="plan-subtitle">How to <span class="text-focus">Use</span></p>
             </div>
 
             <!-- Plan Content -->
@@ -115,7 +115,7 @@
 
             <!-- Plan Head -->
             <div class="plan-head">
-              <h3 class="plan-title">Reddit</h3>
+              <h3 class="plan-title">Help</h3>
               <hr class="normal">
               <p class="plan-subtitle">For getting <span class="text-focus">Help</span></p>
             </div>
