--- a/_includes/sections/testimonials.html
+++ b/_includes/sections/testimonials.html
@@ -32,7 +32,7 @@
           <div class="testimonial-face">
 
             <div class="face">
-              <img src="{{ site.baseurl }}/images/avatars/{{ client.avatar }}" alt="Sera Avatar Image" />
+              <img src="{{ site.baseurl }}/images/logos/{{ client.avatar }}" alt="Sera Avatar Image" />
             </div>
 
             <div class="info">
