--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   <!-- Importing Styles -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6796519999488555" crossorigin="anonymous"></script>
 </head>
